--- a/demo/index.html
+++ b/demo/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="./index.css">
-  <script type="module" src="./cistercian-clock.js"></script>
+  <link rel="stylesheet" href="index.css">
+  <script type="module" src="../src/cistercian-clock.js"></script>
 </head>
 <body>
 
-<h1>Hello le chat !</h1>
+<h1>Cistercian clock demo</h1>
 
 <cistercian-clock></cistercian-clock>
 
